--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
-    "gatsby": "^5.8.1",
+    "gatsby": "^5.14.0",
     "gatsby-plugin-google-gtag": "^5.6.0",
     "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-manifest": "^5.6.0",
     "gatsby-plugin-page-creator": "^5.8.0",
     "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-styled-components": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
