--- a/package.json
+++ b/package.json
@@ -15,35 +15,39 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
+    "@herob191/gatsby-plugin-react-i18next": "^3.0.19",
     "gatsby": "^5.14.0",
-    "gatsby-plugin-google-gtag": "^5.6.0",
-    "gatsby-plugin-image": "^3.6.0",
-    "gatsby-plugin-manifest": "^5.6.0",
-    "gatsby-plugin-page-creator": "^5.8.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-page-creator": "^5.14.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.14.0",
-    "gatsby-plugin-styled-components": "^6.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gatsby-plugin-styled-components": "^6.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "i18next": "^23.16.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^5.3.6"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4",
-    "typescript": "^5.0.3"
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   },
   "repository": {
     "type": "git",
