--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
   },
   "dependencies": {
     "@herob191/gatsby-plugin-react-i18next": "^3.0.19",
+    "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.14.0",
     "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-mdx": "^5.14.1",
     "gatsby-plugin-page-creator": "^5.14.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-styled-components": "^6.14.0",
     "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
     "i18next": "^23.16.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
